--- a/MandD/MandD.csproj
+++ b/MandD/MandD.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.12" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.12" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.12" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.12">
@@ -22,5 +23,11 @@
     <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="8.0.0" />
   </ItemGroup>
 
-	
+   <ItemGroup>
+	   <Content Include="appsettings.json">
+		   <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	   </Content>
+   </ItemGroup>
+
+
 </Project>
